# Y

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  usage.md
src/: main.rs
src/community/: mod.rs
src/crypto/: alias.rs  encryption.rs  identity.rs  mod.rs
src/network/: codec.rs  dht.rs  engine.rs  mod.rs  peer.rs  protocol.rs  search.rs  tor.rs
src/protocol/: commands.rs  message.rs  mod.rs
src/storage/: mod.rs
src/tui/: app.rs  ui.rs
