[package]
name = "y"
version = "0.1.0"
edition = "2021"
description = "Decentralized, anonymous chat over Tor with cryptographic identity"

[dependencies]
# Tor connectivity
arti-client = { version = "0.27", features = ["tokio", "onion-service-client", "onion-service-service"] }
tor-rtcompat = { version = "0.27", features = ["tokio"] }
tor-hsservice = "0.27"
tor-cell = { version = "0.27", features = ["hs"] }
futures = "0.3"

# Crypto - identity & message signing
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = "2"
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Storage
sled = "0.34"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
