[package]
name = "y"
version = "0.3.6"
edition = "2021"
authors = ["elvisthebuilder"]
license = "MIT"
description = "Decentralized, anonymous chat over Tor with cryptographic identity"

[dependencies]
# Tor connectivity
arti-client = { version = "0.27", features = ["tokio", "onion-service-client", "onion-service-service"] }
tor-rtcompat = { version = "0.27", features = ["tokio"] }
tor-hsservice = "0.27"
tor-cell = { version = "0.27", features = ["hs"] }
futures = "0.3"

# Crypto - identity & message signing
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Storage
sled = "0.34"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# SQLite (bundled so Windows/CI doesn't need a system sqlite3.lib)
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[package.metadata.deb]
maintainer = "elvisthebuilder"
copyright = "2024, elvisthebuilder"
extended-description = "Y is a decentralized, anonymous chat platform built in Rust. It runs over the Tor network with cryptographic identity — no signups, no emails, no phone numbers."
section = "net"
priority = "optional"
assets = [
    ["target/release/y", "usr/bin/", "755"],
]

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F6A7-8901-BCDE-F12345678901"
license = false
eula = false
